--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "start": "parcel index.html"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-0",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "parcel-bundler": "^1.12.4"
